--- a/app/src/main/res/layout/api_activity.xml
+++ b/app/src/main/res/layout/api_activity.xml
@@ -6,19 +6,17 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SMS Inbox"
-        android:id="@+id/sms_inbox"
+        android:text="Api Data"
+        android:id="@+id/api_text"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:textSize="18sp"/>
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_view"
-        android:layout_below="@id/sms_inbox"
-        android:layout_marginTop="10dp"/>
-
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/api_view"
+        android:layout_below="@id/api_text"
+        android:layout_marginTop="20dp"/>
 
 </RelativeLayout>
