--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -56,4 +56,32 @@
         android:layout_marginTop="5dp"
         android:text="Contact Activity" />
 
+    <Button
+        android:id="@+id/gallery_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/contact_activity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="Gallery Activity" />
+
+    <Button
+        android:id="@+id/api_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gallery_activity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="Api Activity" />
+
+    <Button
+        android:id="@+id/map_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/api_activity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:text="Map Activity" />
+
+
 </RelativeLayout>
